tests/baselines/reference/EnumAndModuleWithSameNameAndCommonRoot.errors.txt
EnumAndModuleWithSameNameAndCommonRoot.ts(5,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== EnumAndModuleWithSameNameAndCommonRoot.ts (1 errors) ====
    enum enumdule {
        Red, Blue
    }
    
    module enumdule {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    
        export class Point {
            constructor(public x: number, public y: number) { }
        }
    }
    
    var x: enumdule;
    var x = enumdule.Red;
    
    var y: { x: number; y: number };
    var y = new enumdule.Point(0, 0);